syntax = "proto3";

message ColumnProto {
  string name = 1;
  oneof value {
    int32 int_value = 2;
    uint32 uint_value = 3;
  }
}

message RowProto {
  repeated ColumnProto columns = 1;
}

message InsertProto {
  RowProto row = 1;
}

message ReadRowProto {
  ColumnProto key_value = 2;
}

message OperationProto {
  oneof type {
    InsertProto insert = 1;
    ReadRowProto get = 2;
  }
}

message OperationListProto {
  repeated OperationProto operations = 1;
}
